REMOVED ERRORS