@@ -1,24 +1,19 @@
 package RepositoryClass;
 
-import java.util.*;
-
 import EntityClass.Application;
-import EntityClass.Student;
 import EntityClass.InternshipOpportunity;
+import EntityClass.Student;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class ApplicationRepository implements IApplicationRepository {
 
     private final Map<String, Application> store = new HashMap<>();
-    private int nextId = 1;
-
-    private String newId() {
-        return "APP-" + (nextId++);
-    }
 
     @Override
     public void add(Application a) {
-        String id = newId();
-        store.put(id, a);
+        store.put(generateId(a), a);
     }
 
     @Override
@@ -30,23 +25,29 @@ public class ApplicationRepository implements IApplicationRepository {
     public List<Application> findByStudent(Student s) {
         return store.values().stream()
                 .filter(a -> a.getStudent().equals(s))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Application> findByOpportunity(InternshipOpportunity io) {
         return store.values().stream()
                 .filter(a -> a.getTarget().equals(io))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public void update(Application a) {
-        store.replaceAll((id, existing) -> existing == a ? a : existing);
+        // simple replace-by-identity
+        store.replace(generateId(a), a);
     }
 
     @Override
     public List<Application> all() {
         return new ArrayList<>(store.values());
+    }
+
+    private String generateId(Application a) {
+        // for now, just use identityHashCode – you can improve later
+        return Integer.toHexString(System.identityHashCode(a));
     }
 }
